[package]
name = "wifiscan"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI WiFi scanner & signal analyzer - like iwlist + nmcli but with JSON/CSV output and continuous monitoring"
repository = "https://github.com/daviturnesv/wifiscan"
authors = ["Davi Turnes <daviturnesv@users.noreply.github.com>"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
nix = "0.28"
libc = "0.2"
humantime = "2.1"
indicatif = "0.17"
dirs = "5.0"
shellexpand = "3.0"
toml = "0.8"
uuid = { version = "1.0", features = ["serde", "v4"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "wifiscan"
path = "src/main.rs"